--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     </section>
     <section class="two">
       <div class="row">
-        <div class="rectangle-large"><img src="https://kek.gg/i/3PK4ky.jpg" alt="" /></div>
-        <div class="square"><img src="https://kek.gg/i/6322TK.jpg" alt="" /></div>
+        <div class="rectangle-large"><img src="https://i.imgur.com/X0wcXnV.png" alt="" /></div>
+        <div class="square"><img src="https://i.imgur.com/2hS1NcO.png" alt="" /></div>
       </div>
       <div class="row">
-        <div class="square"><img src="https://kek.gg/i/57FxTJ.jpg" alt="" /></div>
-        <div class="square"><img src="https://kek.gg/i/3NP62-.jpg" alt="" /></div>
+        <div class="square"><img src="https://i.imgur.com/HRKuVec.png" alt="" /></div>
+        <div class="square"><img src="hhttps://i.imgur.com/YoqoZlq.png" alt="" /></div>
         <div class="square-double-rec">
-          <div class="rectangle-small"><img src="https://kek.gg/i/3w39qs.png" alt="" /></div>
-          <div class="rectangle-small"><img src="https://kek.gg/i/72XCb4.jpg" alt="" /></div>
+          <div class="rectangle-small"><img src="https://i.imgur.com/EE1YYYh.png" alt="" /></div>
+          <div class="rectangle-small"><img src="https://i.imgur.com/ZPa9hvs.png" alt="" /></div>
         </div>
       </div>
       <div class="row">
-        <div class="rectangle-full"><img src="https://kek.gg/i/pwcZr.png" alt="" /></div>
+        <div class="rectangle-full"><img src="https://i.imgur.com/NjRkWLU.png" alt="" /></div>
       </div>
     </section>
     <section class="three">
@@ -74,7 +74,7 @@
             <a href="#">Add to cart</a>
           </div>
           <div class="item">
-            <img src="https://kek.gg/i/3HCZtg.jpg" alt="" />
+            <img src="https://i.imgur.com/HClUZQ7.png" alt="" />
             <h3>Lorem Ipsum</h3>
             <a href="#">Add to cart</a>
           </div>
